[package]
name = "text-steg"
version = "0.1.0"
authors = ["nikita-skobov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "0.8"
clap = { version = "~2.33", features = ["yaml"]}
yaml-rust = "*"
rand = "0.7.0"
arrayref = "*"
sha2 = "*"
ngrams = "1.0.1"
